# simplePasswordMan

./: CMakeLists.txt  README.md  cryptomanager.cpp  cryptomanager.h  customtitlebar.cpp  customtitlebar.h  dbmanager.cpp  dbmanager.h  main.cpp  window.cpp  window.h  window.ui
